# noaa-recon-api

./: .gitignore  .gitmodules  API.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  README.md  RUST.md  docker-compose.yml  install.ps1  install.sh  llms.txt  pyproject.toml
app/: auth.py  logging_config.py  main.py  models.py  paths.py
app/console/: index.html
app/routers/: admin.py  admin_tokens.py  raw.py  recon.py  satellite.py  storms.py  tdr.py
app/services/: cache.py  goes.py  netcdf_lock.py  recon_met.py  self_update.py  stats.py  storms.py  tdr.py  tokens.py
assets/branding/: noaa_logo.bbcode
clients/netcdf-three-demo/: index.html
clients/tdr-dashboard/: index.html
crates/core/: Cargo.toml
crates/core/src/: bbox.rs  catalog.rs  colormap.rs  lib.rs  models.rs  project.rs  render.rs  sweep.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  config.rs  error.rs  logging.rs  main.rs  state.rs
crates/server/src/routers/: admin.rs  admin_tokens.rs  health.rs  mod.rs  raw.rs  recon.rs  satellite.rs  storms.rs  tdr.rs
crates/server/src/services/: archive_update.rs  cache.rs  downloads.rs  goes.rs  hdf5_zstd.rs  mod.rs  recon_ingest.rs  recon_met.rs  self_update.rs  stats.rs  storms.rs  tdr.rs  tdr_ingest.rs  tdr_nc.rs  tokens.rs
deploy/: goes-nc-cache-cleanup.service  goes-nc-cache-cleanup.timer  hurdat-check.timer  nginx-snippet.conf  noaa-recon-api.service  recon-met-update.service  recon-met-update.timer  storm-archive-update.service  storm-archive-update.timer  tdr-update.timer
docs/colortable_sources/: band13_colortable.json  band9_colortable.json
scripts/: clear_nc_cache.py  import_existing_met_archive.py  ingest_recon_met.py  ingest_storms.py  render_ascii_logo.py
tests/: test_satellite.py
