[project]
name = "noaa-recon-api"
version = "0.1.0"
description = "Open-source API for archival GOES satellite imagery and NOAA Tail Doppler Radar (TDR) data, with a raw-netCDF passthrough for client-side rendering."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.110",
    "uvicorn[standard]>=0.27",
    "netCDF4>=1.6",
    "numpy>=1.26",
    "pillow>=10.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
